# homework_web_7

./: models.py  my_select.py  pyproject.toml  seed.py  test.py
alembic/versions/: e4648ee5b208_init.py
