[tool.poetry]
name = "homework-web-7"
version = "0.1.0"
description = ""
authors = ["yufira <fironovayu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.29"
faker = "^24.14.0"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
